# platform

./: .gitignore  README.md
samples/sources/: CMakeLists.txt  README.md
samples/sources/metrics/: CMakeLists.txt  metrics.cmake
samples/sources/metrics/kernels/: CumulReturn.hpp  MaxDrawdown.hpp  TradeStats.hpp
samples/sources/metrics/montecarlo/: Kernels.hpp  MonteCarlo.cpp  MonteCarlo.h
samples/sources/metrics/standards/: Kernels.hpp  StandardMetrics.cpp  StandardMetrics.h
samples/sources/processors/: CMakeLists.txt  processor.cmake
samples/sources/processors/atr/: AtrKernel.h  AtrProcessor.cpp  AtrProcessor.h
samples/sources/processors/ema/: EmaKernel.h  EmaProcessor.cpp  EmaProcessor.h
samples/sources/processors/fftnoise/: FFTNoiseKernel.h  FFTNoiseProcessor.cpp  FFTNoiseProcessor.h
samples/sources/processors/roc/: RocKernel.h  RocProcessor.cpp  RocProcessor.h
samples/sources/processors/rsi/: RsiKernel.h  RsiProcessor.cpp  RsiProcessor.h
samples/sources/strategies/: CMakeLists.txt  strategy.cmake
samples/sources/strategies/crossemastrategy/: CrossEmaStrategy.cpp  CrossEmaStrategy.h
samples/sources/strategies/simplestrategy/: SimpleStrategy.cpp  SimpleStrategy.h
samples/sources/tests/: CMakeLists.txt
samples/sources/tests/common/: CommonMacros.h  Testutils.h
samples/sources/tests/modules/: CMakeLists.txt  module_test.cc
